tests/compile_fail/not_right_type.stderr
error[E0308]: mismatched types
 --> tests/compile_fail/not_right_type.rs:6:16
  |
4 | #[attr(pub a: usize)]
  |               ----- expected `usize` because of return type
5 | enum Enum {
6 |     #[attr(a = "should fail")]
  |                ^^^^^^^^^^^^^ expected `usize`, found `&str`
